[tool.poetry]
name = "learn-networks"
version = "0.0.0"
description = "manage multiple camera connections over a network"
authors = ["Mac Prible <prible@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "learn_networks"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-contrib-python = "^4.8.0.76"
PySide6 = "^6.5.2"

[tool.poetry.group.dev.dependencies]
black = "pytest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
